--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>CONTACT</title>
+	<title>Donation</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700" rel="stylesheet">
 	<!--
@@ -39,19 +39,12 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index.html"> <div class='logo'><img src="img/logo/Matatu Union Logo.png" alt="" title="" /></div></a>
 				</div>
 				<nav id="nav-menu-container" style="color: aqua;">
 					<ul class="nav-menu">
 						<li class="menu-active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li class="menu-has-children"><a href="">Departments</a>
-							<ul>
-								<li><a href="#">Youth Department</a></li>
-								<li><a href="#">Women Department </a></li>
-							</ul>
-						</li>
-	
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
@@ -128,21 +121,21 @@
 					<form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
 						<div class="row">
 							<div class="col-lg-6 form-group">
-								<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
+								<input id="name" name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
 								 class="common-input mb-20 form-control" required="" type="text">
 
-								<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+								<input id="email" name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
 								 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control"
 								 required="" type="email">
 
-								<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
+								<input id="subject" name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
 								 class="common-input mb-20 form-control" required="" type="text">
 								<div class="mt-20 alert-msg" style="text-align: left;"></div>
 							</div>
 							<div class="col-lg-6 form-group">
-								<textarea class="common-textarea form-control" name="message" placeholder="Messege" onfocus="this.placeholder = ''"
+								<textarea id="message" class="common-textarea form-control" name="message" placeholder="Message" onfocus="this.placeholder = ''"
 								 onblur="this.placeholder = 'Messege'" required=""></textarea>
-								<button class="primary-btn mt-20 text-white" style="float: right;">Send Message</button>
+								<button class="primary-btn mt-20 text-white" onclick="sendMessage()" style="float: right;">Send Message</button>
 
 							</div>
 						</div>
@@ -161,8 +154,7 @@
 					<div class="single-footer-widget">
 						<h6>About Us</h6>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-							magna aliqua.
+							Matatu Workers Union. DEdicated to championing the rights of Matau workers, promoting inclusivity and driving change in the Matatu industry 
 						</p>
 						<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -175,17 +167,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<h6>Follow Us</h6>
 						<p>Let us be social</p>
 						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.facebook.com/Matatuworkersunion"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/MatatuUnion"><i class="fa fa-twitter"></i></a>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-	<!-- End footer Area -->
 
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
